<resources>
    <string name="app_name">SmartHomeMobile</string>
    <string name="labelButtonGuest">Guest Room</string>
    <string name="labelButtonKitchen">Kitchen</string>
    <string name="labelButtonOutside">Outside Lights</string>
    <string name="labelButtonOn">On</string>
    <string name="labelButtonOff">Off</string>
    <string name="labelTitleGuest">Guest Room Control</string>
    <string name="labelTitleKitchen">Kitchen Control</string>
    <string name="labelTitleOutside">Outside Lights Control</string>
    <string name="labelViewGuestMain">Main Light</string>
    <string name="labelViewKitchenStripe">Light Stripe</string>
    <string name="labelViewGuestStair">Stair Light</string>
    <string name="labelViewOutsideEastLight">East Light</string>
    <string name="labelStatusOutput">Connection Status</string>
    <string name="hintLogOutput">Logging Data</string>
    <string name="hintStatusOutput">Connection Status</string>
</resources>