<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.OutsideFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOutsideEastLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/labelViewOutsideEastLight"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOutsideEastLightOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/labelButtonOn"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOutsideEastLightOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/labelButtonOff"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>