<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.GuestFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGuestMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/labelViewGuestMain"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGuestMainOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOn"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGuestMainOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGuestStair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/labelViewGuestStair"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGuestStairOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOn"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGuestStairOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOff"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>