<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.KitchenFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewKitchenStripe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/labelViewKitchenStripe"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonKitchenStripeOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOn"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonKitchenStripeOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/labelButtonOff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonKitchenStripePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="+"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonKitchenStripeMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="-"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>